# TalkScope

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
Backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
Backend/.codex/: README.md  gemini_limit.md  instructions.md  refer-dictionary-endpoint.md
Backend/app/api/: __init__.py
Backend/app/core/: config.py  database.py
Backend/app/crud/: dictionary.py  dictionary_v1.py
Backend/app/models/: __init__.py  dictionary.py  term_idf.py
Backend/app/schemas/: analysis.py  dictionary.py  hoge.py  score_analysis.py
Backend/app/services/: dictionary.py  hoge.py  idf_runtime.py  refer_dictionary.py  refer_dictionary_v1.py  score_building_blocks.py  term_score.py  text_analysis.py
Backend/config/: config.py
Backend/db/: dictionary.sql
Backend/doc/dependRelation&db/: index.html  style.css  workflow.html
Backend/docs/: IDF_DATA_PIPELINE.md  SCORE_ANALYSIS_API.md  TERM_SCORE_AND_THEME_SPEC.md
Backend/scripts/: migrate_word_to_term.py  reset_dictionary_db.py  test_dictionary.py  test_embedding.py  test_refer_dictionary.py  test_refer_dictionary_v1.py
Backend/tests/: conftest.py  test_access_dictionary_DB.py  test_analysis_endpoint.py  test_dictionary_endpoint.py  test_dictionary_service.py  test_dictionary_v1_crud.py  test_gemini_latency.py  test_idf_runtime.py  test_llm_gemini_service.py  test_refer_dictionary_endpoint.py  test_score_analysis_endpoint.py  test_score_building_blocks.py  test_term_score.py  test_text_analysis_service.py
(+341 files in other folders)
